src/objects/CH_EmailAlert__c/CH_EmailAlert__c.object-meta.xml
<CustomObject>
    <description>NOKIASC-30632</description>
    <label>CH Email Alert</label>
    <nameField>
        <displayFormat>CHE{000000}</displayFormat>
        <label>CH Email Alert ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CH Email Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>