src/objects/CH_EmailAlert__c/fields/CH_Bind18__c.field-meta.xml
<CustomField>
    <fullName>CH_Bind18__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CH_Bind18</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>