src/objects/CH_EmailAlert__c/fields/CH_Bind20__c.field-meta.xml
<CustomField>
    <fullName>CH_Bind20__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CH Bind20</label>
    <length>255</length>
    <type>Text</type>
</CustomField>