src/objects/CH_EmailAlert__c/fields/CH_Bind7__c.field-meta.xml
<CustomField>
    <fullName>CH_Bind7__c</fullName>
    <description>NOKIASC-30632</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CH Bind 7</label>
    <length>255</length>
    <type>Text</type>
</CustomField>