src/objects/CH_EmailAlert__c/fields/CH_BindEmail2__c.field-meta.xml
<CustomField>
    <fullName>CH_BindEmail2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CH Bind Email 2</label>
    <type>Email</type>
</CustomField>